--- a/diapos/Celula.org
+++ b/diapos/Celula.org
@@ -388,41 +388,51 @@ $$I_{D}=I_{0}\cdot\left[\exp\left(\frac{e\cdot V}{m\cdot k\cdot
 
 *** Isc y Voc
 
-- Corriente de Cortocircuito
+**** Corriente de Cortocircuito
 
 $$I_{sc}=I(V=0)\Rightarrow I_{D}=0\Rightarrow I=I_{L}$$
 
-- Tensión de Circuito Abierto
+**** Tensión de Circuito Abierto
 
 $$V_{oc}=V(I=0)\Rightarrow I_{L}=I_{D}\Rightarrow
 V_{oc}=m\cdot\frac{k\cdot
   T_{c}}{e}\cdot\ln\left(\frac{I_{L}}{I_{0}}+1\right)$$
 
-- Ecuación general
+**** Ecuación general
 
 $$I=I_{sc}\cdot\left[1-\exp\left(\frac{e\cdot(V_{oc}-V)}{m\cdot k\cdot
       T_{c}}\right)\right]$$
 
-*** Punto de máxima potencia
-
-$$\frac{dP}{dV}=0$$
-
-$$\frac{d(I\cdot
-  V)}{dV}=V\cdot\frac{dI(V)}{dV}+I\cdot\frac{dV}{dV}\Rightarrow
-dP=V\cdot dI+I\cdot dV$$
-
-
 
 *** Punto de máxima potencia
+**** $0<V<V_{mpp}$
+\[
+\frac{dP}{dV}>0 \Rightarrow \frac{dI}{dV}>-\frac{I}{V}
+\]
 
+#+ATTR_LATEX: :height 0.65\textheight
 [[../figs/CurvaIV_Ta20_G800.pdf]]
 
-$V=V_{mpp}:\,\frac{dI}{dV}=-\frac{I}{V}$
+*** Punto de máxima potencia
 
-$0<V<V_{mpp}$:  $\frac{dP}{dV}>0\Rightarrow\frac{dI}{dV}>-\frac{I}{V}$
+**** V=V_{mpp} 
+\[
+\frac{dP}{dV}=0 \Rightarrow \frac{dI}{dV}=-\frac{I}{V}
+\]
 
-$V_{mpp}<V<V_{oc}$: 
-$\frac{dP}{dV}<0\Rightarrow\frac{dI}{dV}<-\frac{I}{V}$
+#+ATTR_LATEX: :height 0.65\textheight
+[[../figs/CurvaIV_Ta20_G800.pdf]]
+
+*** Punto de máxima potencia
+
+**** $V_{mpp}<V<V_{oc}$
+\[
+\frac{dP}{dV}<0 \Rightarrow \frac{dI}{dV}<-\frac{I}{V}
+\]
+
+#+ATTR_LATEX: :height 0.65\textheight
+[[../figs/CurvaIV_Ta20_G800.pdf]]
+
 
 *** Factor de forma y Eficiencia
 - Factor de Forma
