--- a/diapos/Celula.tex
+++ b/diapos/Celula.tex
@@ -1,4 +1,4 @@
-% Created 2017-01-11 mié 11:37
+% Created 2017-01-11 mié 11:55
 % Intended LaTeX compiler: pdflatex
 \documentclass[xcolor={usenames,svgnames,dvipsnames}]{beamer}
 \usepackage[utf8]{inputenc}
@@ -48,11 +48,11 @@
 \maketitle
 
 \section{Teoría de Semiconductores}
-\label{sec:orgf7fbbb2}
+\label{sec:org76ee2af}
 \subsection{Conducción eléctrica}
-\label{sec:org110a3a0}
+\label{sec:orgc3e106e}
 
-\begin{frame}[label={sec:orgea60d73}]{Bandas de energía}
+\begin{frame}[label={sec:org55f8a04}]{Bandas de energía}
 \begin{itemize}[<+->]
 \item En un \alert{sólido} el número de átomos es tan elevado que los niveles de energía forman \alert{bandas continuas de energía}.
 
@@ -66,7 +66,7 @@
 \end{itemize}
 \end{frame}
 
-\begin{frame}[label={sec:org977ae13}]{Bandas de energía}
+\begin{frame}[label={sec:org18e9541}]{Bandas de energía}
 \begin{center}
 
 
@@ -76,7 +76,7 @@
 \end{center}
 \end{frame}
 
-\begin{frame}[label={sec:orgb0099c0}]{Conductores, aislantes y semiconductores}
+\begin{frame}[label={sec:org94afd95}]{Conductores, aislantes y semiconductores}
 Las \alert{propiedades eléctricas} del sólido dependen de esta \alert{posición relativa entre bandas}.
 \begin{itemize}[<+->]
 \item En un \alert{conductor} la \(E_{g}\) es muy baja y los electrones circulan fácilmente por la banda de conducción.
@@ -93,7 +93,7 @@ Las \alert{propiedades eléctricas} del sólido dependen de esta \alert{posició
 \end{itemize}
 \end{frame}
 
-\begin{frame}[label={sec:org625142a}]{Conductores, aislantes y semiconductores}
+\begin{frame}[label={sec:org8a38d2b}]{Conductores, aislantes y semiconductores}
 \begin{block}{La conductividad de los materiales depende de la \alert{concentración de electrones libres} (n) presentes en la banda de conducción}
 \end{block}
 
@@ -107,16 +107,16 @@ Las \alert{propiedades eléctricas} del sólido dependen de esta \alert{posició
 \end{frame}
 
 \subsection{Semiconductores}
-\label{sec:org9aa89ee}
+\label{sec:orgd0ec0a4}
 
-\begin{frame}[label={sec:org2b58e79}]{Red cristalina de Si (T = \SI{0}{\kelvin})}
+\begin{frame}[label={sec:orgfa51d53}]{Red cristalina de Si (T = \SI{0}{\kelvin})}
 \begin{center}
 \begin{center}
 \includegraphics[width=.9\linewidth]{../figs/silicio_T0K.jpg}
 \end{center}
 \end{center}
 \end{frame}
-\begin{frame}[label={sec:org8b88c91}]{Generación de electrón-hueco (T > \SI{0}{\kelvin})}
+\begin{frame}[label={sec:org6637be4}]{Generación de electrón-hueco (T > \SI{0}{\kelvin})}
 \begin{center}
 \begin{center}
 \includegraphics[width=.9\linewidth]{../figs/silicio_T300K.jpg}
@@ -124,7 +124,7 @@ Las \alert{propiedades eléctricas} del sólido dependen de esta \alert{posició
 \end{center}
 \end{frame}
 
-\begin{frame}[plain,label={sec:orga5c49c0}]{Generación de electrón-hueco}
+\begin{frame}[plain,label={sec:org02950b2}]{Generación de electrón-hueco}
 \begin{columns}
 \begin{column}{0.7\columnwidth}
 \begin{itemize}[<+->]
@@ -143,7 +143,7 @@ Las \alert{propiedades eléctricas} del sólido dependen de esta \alert{posició
 \end{columns}
 \end{frame}
 
-\begin{frame}[plain,label={sec:org3575161}]{Recombinación de un par electrón-hueco}
+\begin{frame}[plain,label={sec:org0f9c8b1}]{Recombinación de un par electrón-hueco}
 \begin{columns}
 \begin{column}{0.7\columnwidth}
 \begin{itemize}[<+->]
@@ -163,8 +163,8 @@ Las \alert{propiedades eléctricas} del sólido dependen de esta \alert{posició
 
 
 \subsection{Dopaje de semiconductores}
-\label{sec:org1f17d10}
-\begin{frame}[label={sec:org2612054}]{Definición}
+\label{sec:org618b9c8}
+\begin{frame}[label={sec:org1be4ba7}]{Definición}
 El \alert{dopaje de semiconductores} consiste en introducir de forma controlada impurezas en el cristal para alterar las bandas de energía.
 
 \begin{center}
@@ -173,13 +173,13 @@ El \alert{dopaje de semiconductores} consiste en introducir de forma controlada 
 \end{frame}
 
 
-\begin{frame}[label={sec:org3ccaf71}]{Tipo n}
+\begin{frame}[label={sec:org160dff1}]{Tipo n}
 \begin{center}
 \includegraphics[width=.9\linewidth]{../figs/DopajeN.jpg}
 \end{center}
 \end{frame}
 
-\begin{frame}[plain,label={sec:org9ddefe5}]{Tipo n}
+\begin{frame}[plain,label={sec:org20a4a65}]{Tipo n}
 \begin{columns}
 \begin{column}{0.7\columnwidth}
 \begin{itemize}[<+->]
@@ -204,13 +204,13 @@ El \alert{dopaje de semiconductores} consiste en introducir de forma controlada 
 \end{frame}
 
 
-\begin{frame}[label={sec:org3d7d55f}]{Tipo p}
+\begin{frame}[label={sec:org8ba7297}]{Tipo p}
 \begin{center}
 \includegraphics[width=.9\linewidth]{../figs/DopajeP.jpg}
 \end{center}
 \end{frame}
 
-\begin{frame}[plain,label={sec:orgffdbf47}]{Tipo p}
+\begin{frame}[plain,label={sec:org91599ba}]{Tipo p}
 \begin{columns}
 \begin{column}{0.7\columnwidth}
 \begin{itemize}[<+->]
@@ -235,8 +235,8 @@ El \alert{dopaje de semiconductores} consiste en introducir de forma controlada 
 
 
 \subsection{Unión p-n}
-\label{sec:org434178a}
-\begin{frame}[label={sec:org68d184c}]{Unión p-n}
+\label{sec:org314113a}
+\begin{frame}[label={sec:org79d6200}]{Unión p-n}
 \begin{center}
 \begin{center}
 \includegraphics[width=.9\linewidth]{../figs/Union_PN.jpg}
@@ -245,7 +245,7 @@ El \alert{dopaje de semiconductores} consiste en introducir de forma controlada 
 \end{frame}
 
 
-\begin{frame}[label={sec:orgf5bd119}]{Conducción en una unión p-n}
+\begin{frame}[label={sec:org006e716}]{Conducción en una unión p-n}
 \begin{itemize}
 \item Al \alert{unir un semiconductor tipo p con otro tipo n, se produce un desequilibrio}:
 \begin{itemize}
@@ -261,7 +261,7 @@ El \alert{dopaje de semiconductores} consiste en introducir de forma controlada 
 \end{center}
 \end{frame}
 
-\begin{frame}[label={sec:org6d7dfa4}]{Corriente de Difusión}
+\begin{frame}[label={sec:orge9bfd58}]{Corriente de Difusión}
 \begin{itemize}
 \item \alert{Difusión de portadores mayoritarios}
 \begin{itemize}[<+->]
@@ -278,7 +278,7 @@ El \alert{dopaje de semiconductores} consiste en introducir de forma controlada 
 \end{center}
 \end{frame}
 
-\begin{frame}[label={sec:org697549f}]{Corriente de Arrastre}
+\begin{frame}[label={sec:org80ddeca}]{Corriente de Arrastre}
 \begin{itemize}[<+->]
 \item \alert{Los iones fijos} cercanos a la unión generan un \alert{campo eléctrico de arrastre} en sentido opuesto a la difusión: \alert{barrera de potencial}
 
@@ -293,7 +293,7 @@ El \alert{dopaje de semiconductores} consiste en introducir de forma controlada 
 \end{frame}
 
 
-\begin{frame}[label={sec:org18f13c0}]{Equilibrio en una unión p-n}
+\begin{frame}[label={sec:orga673bbc}]{Equilibrio en una unión p-n}
 \begin{itemize}
 \item El \alert{equilibrio} se alcanza al \alert{compensarse los movimientos de  difusión y de arrastre}.
 \end{itemize}
@@ -305,7 +305,7 @@ El \alert{dopaje de semiconductores} consiste en introducir de forma controlada 
 \end{center}
 \end{frame}
 
-\begin{frame}[plain,label={sec:org27aa6dc}]{Polarización en directa}
+\begin{frame}[plain,label={sec:orgee814ac}]{Polarización en directa}
 \begin{columns}
 \begin{column}{0.7\columnwidth}
 \begin{itemize}[<+->]
@@ -328,7 +328,7 @@ El \alert{dopaje de semiconductores} consiste en introducir de forma controlada 
 \end{columns}
 \end{frame}
 
-\begin{frame}[plain,label={sec:orga457912}]{Polarización en inversa}
+\begin{frame}[plain,label={sec:org9c349e6}]{Polarización en inversa}
 \begin{columns}
 \begin{column}{0.7\columnwidth}
 \begin{itemize}[<+->]
@@ -350,9 +350,9 @@ El \alert{dopaje de semiconductores} consiste en introducir de forma controlada 
 
 
 \subsection{Diodo}
-\label{sec:org7d3a66f}
+\label{sec:org032a62f}
 
-\begin{frame}[label={sec:orgb9e7081}]{Definición}
+\begin{frame}[label={sec:orgb52b492}]{Definición}
 \begin{itemize}
 \item El dispositivo electrónico basado en una unión p-n se denomina diodo.
 
@@ -363,7 +363,7 @@ El \alert{dopaje de semiconductores} consiste en introducir de forma controlada 
 \end{center}
 \end{frame}
 
-\begin{frame}[label={sec:org829e665}]{Ecuación del Diodo}
+\begin{frame}[label={sec:org710562d}]{Ecuación del Diodo}
 \begin{itemize}
 \item $$I_{D}=I_{0}\cdot[\exp(\frac{V}{m\cdot V_{T}})-1]$$ donde \(I_{0}\) es la corriente de saturación en oscuridad del diodo, \(V\) la tensión aplicada al diodo y \(m\) el factor de idealidad del diodo.
 
@@ -374,7 +374,7 @@ $$V_{T}=\frac{\mathrm{k}T}{\mathrm{e}}=\SI{25.85}{\milli\volt}$$ donde
 (en grados Kelvin), y \(\mathrm{e}\) es la carga del electrón.
 \end{frame}
 
-\begin{frame}[label={sec:orgd8c41b4}]{}
+\begin{frame}[label={sec:orgd83a469}]{}
 \begin{center}
 \includegraphics[width=.9\linewidth]{../figs/EcuacionDiodo.pdf}
 \end{center}
@@ -382,15 +382,15 @@ $$V_{T}=\frac{\mathrm{k}T}{\mathrm{e}}=\SI{25.85}{\milli\volt}$$ donde
 
 
 \section{Unión P-N iluminada}
-\label{sec:org8656a70}
+\label{sec:orgdb03890}
 
-\begin{frame}[label={sec:org76812ac}]{}
+\begin{frame}[label={sec:org25a94a8}]{}
 \begin{center}
 \includegraphics[width=.9\linewidth]{../figs/CelulaSolar.pdf}
 \end{center}
 \end{frame}
 
-\begin{frame}[label={sec:org56476b0}]{Efecto fotoeléctrico}
+\begin{frame}[label={sec:orgf9aa565}]{Efecto fotoeléctrico}
 \begin{itemize}[<+->]
 \item Efecto fotoeléctrico: \alert{los electrones se desplazan a la banda de conducción por el aporte energético de fotones} (\(E_{f}=\frac{h\cdot c}{\lambda}\)).
 
@@ -403,7 +403,7 @@ $$V_{T}=\frac{\mathrm{k}T}{\mathrm{e}}=\SI{25.85}{\milli\volt}$$ donde
 \end{frame}
 
 
-\begin{frame}[label={sec:orgdd5818d}]{Absorción de luz y generación de portadores}
+\begin{frame}[label={sec:orgd8ea4a9}]{Absorción de luz y generación de portadores}
 \begin{itemize}[<+->]
 \item Si el \alert{fotón es poco energético} (\(E_{f}<E_{g}\)) \alert{no interactúa con
 el semiconductor} (como si fuese transparente)
@@ -421,7 +421,7 @@ ultravioleta (\(\lambda<400\, nm\)) rompen enlaces.
 \end{itemize}
 \end{frame}
 
-\begin{frame}[label={sec:org21fb08f}]{Absorción de luz y generación de portadores}
+\begin{frame}[label={sec:orgfc30358}]{Absorción de luz y generación de portadores}
 \begin{itemize}[<+->]
 \item Los fotones con \(E_{f}<E_{g}\) atraviesan el cristal sin ser absorbidos: \alert{pérdidas de no-absorción}
 
@@ -438,15 +438,12 @@ reflexión}
 dispositivo: \alert{pérdidas por recombinación}
 \end{itemize}
 \end{itemize}
-
-$$I_{L}<e\cdot A\cdot\intop_{E_{G}}^{\infty}S(E)\mathrm{d}E$$
 \end{frame}
 
-
 \section{Funcionamiento de una célula solar}
-\label{sec:orge93975f}
+\label{sec:org5e4f6d2}
 
-\begin{frame}[label={sec:org530bdf7}]{}
+\begin{frame}[label={sec:org565317e}]{}
 \begin{center}
 \includegraphics[width=.9\linewidth]{../figs/CelulaSolar.pdf}
 \end{center}
@@ -454,8 +451,8 @@ $$I_{L}<e\cdot A\cdot\intop_{E_{G}}^{\infty}S(E)\mathrm{d}E$$
 
 
 \subsection{Curva IV y Puntos Característicos}
-\label{sec:orgad81a9a}
-\begin{frame}[label={sec:org10310e3}]{Característica I-V de iluminación}
+\label{sec:orgdebe241}
+\begin{frame}[label={sec:org32b3286}]{Característica I-V de iluminación}
 $$I=I_{L}-I_{D}$$
 
 $$I_{D}=I_{0}\cdot\left[\exp\left(\frac{e\cdot V}{m\cdot k\cdot
@@ -466,53 +463,62 @@ $$I_{D}=I_{0}\cdot\left[\exp\left(\frac{e\cdot V}{m\cdot k\cdot
 \end{center}
 \end{frame}
 
-\begin{frame}[label={sec:orgab0e409}]{Isc y Voc}
-\begin{itemize}
-\item Corriente de Cortocircuito
-\end{itemize}
-
+\begin{frame}[label={sec:orgc731ca6}]{Isc y Voc}
+\begin{block}{Corriente de Cortocircuito}
 $$I_{sc}=I(V=0)\Rightarrow I_{D}=0\Rightarrow I=I_{L}$$
+\end{block}
 
-\begin{itemize}
-\item Tensión de Circuito Abierto
-\end{itemize}
-
+\begin{block}{Tensión de Circuito Abierto}
 $$V_{oc}=V(I=0)\Rightarrow I_{L}=I_{D}\Rightarrow
 V_{oc}=m\cdot\frac{k\cdot
   T_{c}}{e}\cdot\ln\left(\frac{I_{L}}{I_{0}}+1\right)$$
+\end{block}
 
-\begin{itemize}
-\item Ecuación general
-\end{itemize}
-
+\begin{block}{Ecuación general}
 $$I=I_{sc}\cdot\left[1-\exp\left(\frac{e\cdot(V_{oc}-V)}{m\cdot k\cdot
       T_{c}}\right)\right]$$
-\end{frame}
-
-\begin{frame}[label={sec:orgde9116c}]{Punto de máxima potencia}
-$$\frac{dP}{dV}=0$$
-
-$$\frac{d(I\cdot
-  V)}{dV}=V\cdot\frac{dI(V)}{dV}+I\cdot\frac{dV}{dV}\Rightarrow
-dP=V\cdot dI+I\cdot dV$$
+\end{block}
 \end{frame}
 
 
+\begin{frame}[label={sec:orgd040a97}]{Punto de máxima potencia}
+\begin{block}{\(0<V<V_{mpp}\)}
+\[
+\frac{dP}{dV}>0 \Rightarrow \frac{dI}{dV}>-\frac{I}{V}
+\]
 
-\begin{frame}[label={sec:org9595ae6}]{Punto de máxima potencia}
 \begin{center}
-\includegraphics[width=.9\linewidth]{../figs/CurvaIV_Ta20_G800.pdf}
+\includegraphics[height=0.65\textheight]{../figs/CurvaIV_Ta20_G800.pdf}
 \end{center}
-
-\(V=V_{mpp}:\,\frac{dI}{dV}=-\frac{I}{V}\)
-
-\(0<V<V_{mpp}\):  \(\frac{dP}{dV}>0\Rightarrow\frac{dI}{dV}>-\frac{I}{V}\)
-
-\(V_{mpp}<V<V_{oc}\): 
-\(\frac{dP}{dV}<0\Rightarrow\frac{dI}{dV}<-\frac{I}{V}\)
+\end{block}
 \end{frame}
 
-\begin{frame}[label={sec:org9279dab}]{Factor de forma y Eficiencia}
+\begin{frame}[label={sec:org3f24651}]{Punto de máxima potencia}
+\begin{block}{V=V\(_{\text{mpp}}\)}
+\[
+\frac{dP}{dV}=0 \Rightarrow \frac{dI}{dV}=-\frac{I}{V}
+\]
+
+\begin{center}
+\includegraphics[height=0.65\textheight]{../figs/CurvaIV_Ta20_G800.pdf}
+\end{center}
+\end{block}
+\end{frame}
+
+\begin{frame}[label={sec:orgf86ed77}]{Punto de máxima potencia}
+\begin{block}{\(V_{mpp}<V<V_{oc}\)}
+\[
+\frac{dP}{dV}<0 \Rightarrow \frac{dI}{dV}<-\frac{I}{V}
+\]
+
+\begin{center}
+\includegraphics[height=0.65\textheight]{../figs/CurvaIV_Ta20_G800.pdf}
+\end{center}
+\end{block}
+\end{frame}
+
+
+\begin{frame}[label={sec:org009ca3f}]{Factor de forma y Eficiencia}
 \begin{itemize}
 \item Factor de Forma
 \end{itemize}
@@ -528,7 +534,7 @@ $$\eta = \frac{I_{mpp}\cdot V_{mpp}}{P_{L}}$$
 $$\eta = \frac{I_{mpp}\cdot V_{mpp}}{A \cdot G}$$
 \end{frame}
 
-\begin{frame}[plain,label={sec:org7139f5f}]{Eficiencia de células}
+\begin{frame}[plain,label={sec:orge380b90}]{Eficiencia de células}
 \begin{center}
 \includegraphics[width=1.2\textwidth]{../figs/efficiency_chart_nrel.jpg}
 \end{center}
@@ -537,9 +543,9 @@ $$\eta = \frac{I_{mpp}\cdot V_{mpp}}{A \cdot G}$$
 \end{frame}
 
 \subsection{Influencia de Temperatura y Radiación}
-\label{sec:org79d6796}
+\label{sec:orgda904f4}
 
-\begin{frame}[label={sec:org9f0ecc8}]{Radiación}
+\begin{frame}[label={sec:org615bc99}]{Radiación}
 \begin{itemize}
 \item \alert{Fotocorriente proporcional a intensidad de radiación}
 
@@ -552,13 +558,13 @@ $$\eta = \frac{I_{mpp}\cdot V_{mpp}}{A \cdot G}$$
 \end{itemize}
 \end{frame}
 
-\begin{frame}[label={sec:org549ee7a}]{Influencia de la Radiación}
+\begin{frame}[label={sec:orgaf7c904}]{Influencia de la Radiación}
 \begin{center}
 \includegraphics[width=.9\linewidth]{../figs/CurvaIV_Ta20.pdf}
 \end{center}
 \end{frame}
 
-\begin{frame}[label={sec:org90fe543}]{Temperatura}
+\begin{frame}[label={sec:org7a9ef5a}]{Temperatura}
 \begin{itemize}
 \item Se estrecha el salto entre banda de valencia y conducción: aumenta \emph{ligeramente} la fotocorriente
 
@@ -569,13 +575,13 @@ $$\eta = \frac{I_{mpp}\cdot V_{mpp}}{A \cdot G}$$
 \end{itemize}
 \end{frame}
 
-\begin{frame}[label={sec:org1f68d89}]{Influencia de Temperatura}
+\begin{frame}[label={sec:org86c7662}]{Influencia de Temperatura}
 \begin{center}
 \includegraphics[width=.9\linewidth]{../figs/CurvaIV_G800.pdf}
 \end{center}
 \end{frame}
 
-\begin{frame}[label={sec:org48e6369}]{Condiciones Estándar de Medida}
+\begin{frame}[label={sec:org2aa6b1c}]{Condiciones Estándar de Medida}
 \begin{itemize}
 \item Irradiancia: \(G^{*}=\SI{1000}{\watt\per\meter\squared}\) con
 incidencia normal.
@@ -592,9 +598,9 @@ $$\eta^{*}=\frac{I_{mpp}^{*}\cdot V_{mpp}^{*}}{A\cdot G^{*}}$$
 
 
 \subsection{Circuito equivalente de la célula}
-\label{sec:org4551117}
+\label{sec:orgc8c44c8}
 
-\begin{frame}[label={sec:org540f4a2}]{Circuito equivalente}
+\begin{frame}[label={sec:orge928689}]{Circuito equivalente}
 \begin{center}
 \includegraphics[width=.9\linewidth]{../figs/ModeloElectricoCelulaSolar.pdf}
 \end{center}
@@ -613,7 +619,7 @@ $$\eta^{*}=\frac{I_{mpp}^{*}\cdot V_{mpp}^{*}}{A\cdot G^{*}}$$
 $$I=I_{sc}[1-\exp(\frac{V-V_{oc}+I\cdot R_{s}}{m\cdot V_{t}})]$$
 \end{frame}
 
-\begin{frame}[label={sec:orge376bbd}]{Resistencia Serie: Curva IV}
+\begin{frame}[label={sec:orga9b6c4e}]{Resistencia Serie: Curva IV}
 \begin{itemize}
 \item Resistencia de contactos metálicos con el semiconductor
 
@@ -627,7 +633,7 @@ $$I=I_{sc}[1-\exp(\frac{V-V_{oc}+I\cdot R_{s}}{m\cdot V_{t}})]$$
 \end{center}
 \end{frame}
 
-\begin{frame}[label={sec:orge3ae809}]{Resistencia Serie: Curva PV}
+\begin{frame}[label={sec:org6883531}]{Resistencia Serie: Curva PV}
 \begin{itemize}
 \item Resistencia de contactos metálicos con el semiconductor
 
@@ -641,7 +647,7 @@ $$I=I_{sc}[1-\exp(\frac{V-V_{oc}+I\cdot R_{s}}{m\cdot V_{t}})]$$
 \end{center}
 \end{frame}
 
-\begin{frame}[label={sec:org2f9cf62}]{Resistencia paralelo: Curva IV}
+\begin{frame}[label={sec:org0298b7c}]{Resistencia paralelo: Curva IV}
 \begin{itemize}
 \item Fugas de corriente en bordes de célula
 
@@ -655,7 +661,7 @@ $$I=I_{sc}[1-\exp(\frac{V-V_{oc}+I\cdot R_{s}}{m\cdot V_{t}})]$$
 \end{center}
 \end{frame}
 
-\begin{frame}[label={sec:org02cbb58}]{Resistencia paralelo: Curva PV}
+\begin{frame}[label={sec:org3342564}]{Resistencia paralelo: Curva PV}
 \begin{itemize}
 \item Fugas de corriente en bordes de célula
 
@@ -671,9 +677,9 @@ $$I=I_{sc}[1-\exp(\frac{V-V_{oc}+I\cdot R_{s}}{m\cdot V_{t}})]$$
 
 
 \subsection{Cálculo del MPP}
-\label{sec:orged2abe7}
+\label{sec:org4704bbe}
 
-\begin{frame}[label={sec:org63b78fc}]{Método de J.M. Ruiz}
+\begin{frame}[label={sec:orgb773f96}]{Método de J.M. Ruiz}
 \begin{itemize}
 \item Normalización
 \end{itemize}
@@ -692,7 +698,7 @@ $$\begin{aligned}
   p_{mpp} & = & FF\end{aligned}$$
 \end{frame}
 
-\begin{frame}[label={sec:org96b47d9}]{Método de J.M. Ruiz}
+\begin{frame}[label={sec:org244b3b8}]{Método de J.M. Ruiz}
 \begin{itemize}
 \item Resistencia Serie y FF
 \end{itemize}
@@ -709,7 +715,7 @@ $$\begin{aligned}
   k_{oc} & = & \frac{V_{oc}}{V_{t}}\end{aligned}$$
 \end{frame}
 
-\begin{frame}[label={sec:org4279112}]{Método de J.M. Ruiz}
+\begin{frame}[label={sec:org102a061}]{Método de J.M. Ruiz}
 \begin{itemize}
 \item Aproximación para MPP
 \end{itemize}
@@ -723,7 +729,7 @@ $$\begin{aligned}
   D_{M0} & = & \frac{k_{oc}-1}{k_{oc}-\ln k_{oc}}\end{aligned}$$
 \end{frame}
 
-\begin{frame}[label={sec:org68a88cb}]{Método de J.M. Ruiz}
+\begin{frame}[label={sec:orgb2af6b9}]{Método de J.M. Ruiz}
 \begin{itemize}
 \item Itinerario
 
@@ -746,7 +752,7 @@ donde se debe emplear el valor de \(V_{t}\) para
 \end{itemize}
 \end{frame}
 
-\begin{frame}[label={sec:org66e6f6c}]{Simplificado: Factor de Forma Constante}
+\begin{frame}[label={sec:org3265177}]{Simplificado: Factor de Forma Constante}
 $$FF=FF^{*}$$
 
 $$\begin{aligned}
@@ -754,7 +760,7 @@ $$\begin{aligned}
   \frac{V_{mpp}}{V_{oc}} & = & \frac{V_{mpp}^{*}}{V_{oc}^{*}}\end{aligned}$$
 \end{frame}
 
-\begin{frame}[label={sec:org7572a60}]{Ejercicio de Cálculo}
+\begin{frame}[label={sec:org3c837ca}]{Ejercicio de Cálculo}
 De una célula de \(\SI{100}{\centi\meter\squared}\) y \(I_{sc}^{*}=3\, A\), \(I_{mpp}^{*}=2.7\, A\) , \(V_{oc}^{*}=0.6\, V\),
 \(V_{mpp}^{*}=0.48\, V\), calcular suponiendo factor de forma constante:
 
@@ -766,9 +772,9 @@ De una célula de \(\SI{100}{\centi\meter\squared}\) y \(I_{sc}^{*}=3\, A\), \(I
 \end{frame}
 
 \section{Fabricación}
-\label{sec:org047b983}
+\label{sec:org7350f9c}
 
-\begin{frame}[label={sec:org429ff2d}]{}
+\begin{frame}[label={sec:orgc0b5a71}]{}
 \begin{center}
 \includegraphics[width=.9\linewidth]{/home/oscar/github/esf/figs/solar_cell_manufacturing_video.jpg}
 \end{center}
@@ -776,7 +782,7 @@ De una célula de \(\SI{100}{\centi\meter\squared}\) y \(I_{sc}^{*}=3\, A\), \(I
 \url{https://www.youtube.com/watch?v=fZ1SC-vUe_I}
 \end{frame}
 
-\begin{frame}[label={sec:org142d8a6}]{Purificación de silicio}
+\begin{frame}[label={sec:org900705a}]{Purificación de silicio}
 \begin{itemize}
 \item El silicio puede extraerse de la cuarzita obteniendo Silicio de grado metalúrgico (98\% pureza).
 
@@ -790,7 +796,7 @@ De una célula de \(\SI{100}{\centi\meter\squared}\) y \(I_{sc}^{*}=3\, A\), \(I
 \end{itemize}
 \end{frame}
 
-\begin{frame}[label={sec:orge9173cf}]{Formación de obleas}
+\begin{frame}[label={sec:org0808da1}]{Formación de obleas}
 \begin{itemize}
 \item Para obtener mayor pureza se emplea el silicio monocristalino (un sólo cristal) obtenido mediante el proceso de Czochralski o similar (se utiliza una semilla de cristal para crecer silicio a muy alta temperatura).
 
@@ -804,7 +810,7 @@ De una célula de \(\SI{100}{\centi\meter\squared}\) y \(I_{sc}^{*}=3\, A\), \(I
 \end{itemize}
 \end{frame}
 
-\begin{frame}[label={sec:orgbd93cd1}]{Formación de células}
+\begin{frame}[label={sec:orgf2059b4}]{Formación de células}
 \begin{itemize}
 \item Se añaden los contactos posterior (alto recubrimiento) y anterior (optimización para obtener baja \(R_{s}\) y poco sombreado) empleando aleaciones de plata y aluminio.
 
